work in progress

--- a/css-canvas-medical/index.html
+++ b/css-canvas-medical/index.html
@@ -30,6 +30,7 @@
         <div class="seperate">
           <hr>
         </div>
+<!--SAME FOR ALL PAGES ABOVE THIS POINT-->
 
 
         <!--section 1 -->
@@ -75,6 +76,8 @@
           </div>
         </div>
 
+
+        <!--SAME FOR ALL PAGES BELOW THIS POINT-->
         <!--section 3-->
         <div class="s3">
           <div class="s3text">
