--- a/css-canvas-medical/about-us.html
+++ b/css-canvas-medical/about-us.html
@@ -143,8 +143,79 @@
           </div>
         </div>
 
+        <div class="row">
+          <div class="column-full">
+            <h1>Clinical Advisory Board</h1>
+          </div>
+        </div>
+
+        <div class="row-about">
+          <div class="column-thirds-about">
+            <p>Andrew Nadler MD, Internal Medicine</p>
+            <p>Brucke Block MD, Pediatrics</p>
+            <p>Anna Hines FNP, Family Nurse Practioner</p>
+          </div>
+
+          <div class="column-thirds-about">
+            <p>Ninad Athale MD, Family Medicine</p>
+            <p>Steve Magee MD, Family Medicine</p>
+
+          </div>
+
+          <div class="column-thirds-about">
+            <p>Meenesh Bhimani MD, Emergency Medicine</p>
+            <p>Erik MCdonald MD, Orthopedic Surgery</p>
+          </div>
+
+        </div>
 
 
 
 
-      </div>
+
+        <div class="about-row">
+          <div class="column-full-about">
+            <h1>Our Story</h1>
+          </div>
+        </div>
+
+        <div class="about-row">
+          <div class="column-full-about">
+            <p>
+              Andrew founded Canvas in 2015 after years of seeing his wife Anna - a family <br>
+              nurse practicioner - sacrifice family time in the evenings to "finish" charting. It <br>
+              never ended.
+            </p>
+          </div>
+        </div>
+
+        <div class="about-row">
+          <div class="column-full-about">
+            <p>
+              Andrew knew that the answer wasn&apos;t to go out and do it alone. He started to fill the <br>
+              gaps in his experience. Seven practicing clinicians formed the lcinical advisory <br>
+              board - rather than leave practice to work full0time with Canvas, they used <br>
+              and reviewed product changes in their
+              practices. Out Medical firector, Dr.Zimmerman, <br>
+              joined when he saw the potential of Canvas to help independent practices like his <br>
+              praactice, Temescal Creek Medicine in Oakland, CA. Julian joined Canvas after <br>
+              working at Medicare and seeing the failures of current technology to keep up with <br>
+              increasing regulatory demands without burdening clinicians. Joe and a world class <br>
+              group of software developers joibed to accelerate our ability to listen to clinician. <br>
+              feedback and contasntly improve the product.
+            </p>
+          </div>
+        </div>
+        <div class="about-row">
+          <div class="column-full-about">
+            <p>
+              With Canvas, we created a fundametally different way of charting that comletely <br>
+              eliminates the need to menus and pop-ups. The name of the company describes <br>
+              the charting experience - it feels like a blank canvas where you can tell the <br>
+              patient&apos;s story and seamlessly complete the notes, orders, and chart review on a single, <br>
+              unified screen. With seamlessly, integrated population health, billing, and practice <br>
+              management, Canvas is a reimagined platform for the moden primary care <br>
+              practice.
+            </p>
+          </div>
+        </div>
