javascript-typing-tutor | Keivan Mojmali

--- a/javascript-typing-tutor/index.html
+++ b/javascript-typing-tutor/index.html
@@ -10,7 +10,7 @@
 
       <div class="container">
 
-        <div class="off">
+        <div id="try" class="off">
           <h1 class='count-words'>You scored 90%! </h1>
           <button onClick="window.location.reload()" class='button'>Give it another go?</button>
         </div>
@@ -23,7 +23,7 @@
                 <span>m</span>
                 <span>p</span>
                 <span>y</span>
-                <span id=width> </span>
+                <span> </span>
             </div>
             <div class="inline-div">
               <span>w</span>
@@ -33,7 +33,7 @@
               <span>r</span>
               <span>d</span>
               <span>s</span>
-              <span> </span>
+              <span > </span>
             </div>
 
             <div class="inline-div">
