javascript-carousel/ | Keivan Mojmali

--- a/javascript-carousel/index.html
+++ b/javascript-carousel/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class="col-img">
           <div class="image">
-            <img id="image" src="./images/001.png" alt="Pokemon Image">
+            <img class="actualImage" id="image" src="./images/001.png" alt="Pokemon Image">
           </div>
         </div>
         <div class="col-arrow">
