--- a/bootstrap-pricing/index.html
+++ b/bootstrap-pricing/index.html
@@ -12,15 +12,15 @@
 
 <body>
 
-  <nav class="nav">
+  <nav>
     <div class="row justify-content-between">
       <div class="col">
-        <h3>Company name</h3>
+        <h4>Company name</h4>
       </div>
       <div class="col">
         <ul class="nav">
           <li class="nav-item">
-            <a href="#" class="nav-link active"> Features</a>
+            <a href="#" class="nav-link active "> Features</a>
           </li>
           <li class="nav-item">
             <a href="#" class="nav-link">Enterprise</a>
@@ -32,16 +32,33 @@
             <a href="#" class="nav-link">Pricing</a>
           </li>
           <li class="nav-item">
-            <button class="btn btn-info btn-lg">Sign up</button>
+            <button class="btn btn-outline-primary btn-lg">Sign up</button>
           </li>
         </ul>
       </div>
     </div>
-
-
   </nav>
 
+  <div class="container">
+    <div class="row">
+      <div class="col text-center">
+        <h1>Pricing</h1>
+      </div>
+    </div>
 
+    <div class="row">
+      <div class="col text-center">
+        <p>
+          Quickly build am effective pricing table for your potential customer with this Bootstrap example. It's built with default Bootstrap components and utilites with little customization.
+        </p>
+      </div>
+    </div>
+
+
+
+
+
+  </div>
 
 
 
