--- a/bootstrap-pricing/index.html
+++ b/bootstrap-pricing/index.html
@@ -54,8 +54,90 @@
       </div>
     </div>
 
+    <div class="row">
+      <div class="col">
+        <div class="card">
+          <div class="card-header">
+            Free
+          </div>
+          <div class="card-body">
+            <h4 class="card-title">
+              $0 / mo
+            </h4>
+            <p class="card-text">
+              10 users included
+            </p>
+            <p class="card-text">
+              2 GB of storage
+            </p>
+            <p class="card-text">
+              Email support
+            </p>
+            <p class="card-text">
+              Help center access
+            </p>
+            <a href="#" class="btn btn-outline-primary btn-lg">
+              Sign up for free
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card">
+          <div class="card-header">
+            Pro
+          </div>
+          <div class="card-body">
+            <h4 class="card-title">
+              $15 / mo
+            </h4>
+            <p class="card-text">
+              20 users included
+            </p>
+            <p class="card-text">
+              10 GB of storage
+            </p>
+            <p class="card-text">
+              Priority email Support
+            </p>
+            <p class="card-text">
+              Help center access
+            </p>
+            <a href="#" class="btn btn-primary btn-lg">Get started</a>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card">
+          <div class="card-header">
+            Enterprise
+          </div>
+          <div class="card-body">
+            <div class="card-title">
+              <h4>
+                Enterprise
+              </h4>
+              <p class="card-text">
+                30 users included
+              </p>
+              <p class="card-text">
+                15 GB of storage
+              </p>
+              <p class="card-text">
+                Phone and email support
+              </p>
+              <p class="card-text">
+                Help center access
+              </p>
+              <a href="#" class="btn btn-lg btn-primary">
+                Contact us
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
 
-
+    </div>
 
 
   </div>
