half way through footer then styling

--- a/bootstrap-pricing/index.html
+++ b/bootstrap-pricing/index.html
@@ -137,6 +137,24 @@
         </div>
       </div>
 
+      <footer>
+        <div class="row">
+          <div class="col">
+            <img src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg " alt="Bootstrap image">
+            <p> &copy; 2017-2018</p>
+          </div>
+          <div class="col">
+            <h4>Features</h4>
+            <p>Cool stuff</p>
+            <p>Random feature</p>
+            <p>Team feature</p>
+            <p>Stuff for developers</p>
+            <p>Another one</p>
+            <p>last time</p>
+          </div>
+        </div>
+      </footer>
+
     </div>
 
 
