--- a/bootstrap-pricing/index.html
+++ b/bootstrap-pricing/index.html
@@ -6,32 +6,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-
+  <link rel="stylesheet" href="style.css">
   <title>Bootstrap Pricing</title>
 </head>
 
 <body>
 
   <nav>
-    <div class="row justify-content-between">
+    <div class="row justify-content-between p-4  bg-white border-bottom box-shadow">
       <div class="col">
-        <h4>Company name</h4>
+        <h4 class="text-dark ">Company name</h4>
       </div>
       <div class="col">
-        <ul class="nav">
-          <li class="nav-item">
-            <a href="#" class="nav-link active "> Features</a>
+        <ul class="nav justify-content-end">
+          <li class="nav-item mr-1">
+            <a href="#" class="nav-link active text-dark"> Features</a>
           </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">Enterprise</a>
+          <li class="nav-item mr-1">
+            <a href="#" class="nav-link text-dark">Enterprise</a>
           </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">Support</a>
+          <li class="nav-item mr-1">
+            <a href="#" class="nav-link text-dark">Support</a>
           </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">Pricing</a>
+          <li class="nav-item mr-1">
+            <a href="#" class="nav-link text-dark">Pricing</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item ">
             <button class="btn btn-outline-primary btn-lg">Sign up</button>
           </li>
         </ul>
@@ -39,19 +39,24 @@
     </div>
   </nav>
 
-  <div class="container">
-    <div class="row">
+
+
+  <div class="container justify-content-between">
+    <div class="container pl-6 pr-6">
+    <div class="row mt-4 pt-4">
       <div class="col text-center">
-        <h1>Pricing</h1>
+        <h1 class="display-3">Pricing</h1>
       </div>
     </div>
 
     <div class="row">
       <div class="col text-center">
-        <p>
-          Quickly build am effective pricing table for your potential customer with this Bootstrap example. It's built with default Bootstrap components and utilites with little customization.
+        <p class="lead p-4">
+          Quickly build am effective pricing table for your potential customer with this Bootstrap example. It's built
+          with default Bootstrap components and utilites with little customization.
         </p>
       </div>
+    </div>
     </div>
 
     <div class="row">
@@ -136,27 +141,39 @@
           </div>
         </div>
       </div>
-
-      <footer>
-        <div class="row">
-          <div class="col">
-            <img src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg " alt="Bootstrap image">
-            <p> &copy; 2017-2018</p>
-          </div>
-          <div class="col">
-            <h4>Features</h4>
-            <p>Cool stuff</p>
-            <p>Random feature</p>
-            <p>Team feature</p>
-            <p>Stuff for developers</p>
-            <p>Another one</p>
-            <p>last time</p>
-          </div>
-        </div>
-      </footer>
-
     </div>
 
+    <footer>
+      <div class="row">
+        <div class="col">
+          <img src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg " alt="Bootstrap image">
+          <p> &copy; 2017-2018</p>
+        </div>
+        <div class="col">
+          <h4>Features</h4>
+          <p>Cool stuff</p>
+          <p>Random feature</p>
+          <p>Team feature</p>
+          <p>Stuff for developers</p>
+          <p>Another one</p>
+          <p>last time</p>
+        </div>
+        <div class="col">
+          <h4>Reources</h4>
+          <p>Resource</p>
+          <p>Resource name</p>
+          <p>Another resource</p>
+          <p>Final resource</p>
+        </div>
+        <div class="col">
+          <h4>About</h4>
+          <p>Team</p>
+          <p>Locations</p>
+          <p>Privacy</p>
+          <p>Terms</p>
+        </div>
+      </div>
+    </footer>
 
   </div>
 
