all done except footer

--- a/bootstrap-pricing/index.html
+++ b/bootstrap-pricing/index.html
@@ -15,7 +15,7 @@
   <nav>
     <div class="row justify-content-between p-4  bg-white border-bottom box-shadow">
       <div class="col">
-        <h4 class="text-dark ">Company name</h4>
+        <h4 class="text-dark ml-4 font-weight-normal ">Company name</h4>
       </div>
       <div class="col">
         <ul class="nav justify-content-end">
@@ -42,7 +42,7 @@
 
 
   <div class="container justify-content-between">
-    <div class="container pl-6 pr-6">
+    <div class="container pl-7 pr-7 mb-4">
     <div class="row mt-4 pt-4">
       <div class="col text-center">
         <h1 class="display-3">Pricing</h1>
@@ -61,86 +61,80 @@
 
     <div class="row">
       <div class="col">
-        <div class="card">
-          <div class="card-header">
-            Free
+        <div class="card text-center shadow">
+          <div class="card-header text-center">
+            <h4 class="font-weight-normal">Free</h4>
           </div>
           <div class="card-body">
-            <h4 class="card-title">
-              $0 / mo
-            </h4>
-            <p class="card-text">
+            <h1 class="card-title mb-4">$0 <span class="text-secondary font-weight-light">/ mo</span></h1>
+            <p class="card-text m-1">
               10 users included
             </p>
-            <p class="card-text">
+            <p class="card-text m-1">
               2 GB of storage
             </p>
-            <p class="card-text">
+            <p class="card-text m-1">
               Email support
             </p>
-            <p class="card-text">
+            <p class="card-text mb-4 ">
               Help center access
             </p>
-            <a href="#" class="btn btn-outline-primary btn-lg">
+            <a href="#" class="btn btn-outline-primary btn-lg w-100">
               Sign up for free
             </a>
           </div>
         </div>
       </div>
       <div class="col">
-        <div class="card">
-          <div class="card-header">
-            Pro
+        <div class="card text-center shadow">
+          <div class="card-header text-center">
+            <h4 class="font-weight-normal">Pro</h4>
           </div>
           <div class="card-body">
-            <h4 class="card-title">
-              $15 / mo
-            </h4>
-            <p class="card-text">
+            <h1 class="card-title mb-4">$15 <span class="text-secondary font-weight-light">/ mo</span></h1>
+            <p class="card-text m-1">
               20 users included
             </p>
-            <p class="card-text">
+            <p class="card-text m-1">
               10 GB of storage
             </p>
-            <p class="card-text">
-              Priority email Support
+            <p class="card-text m-1">
+              Priority email support
             </p>
-            <p class="card-text">
+            <p class="card-text mb-4 ">
               Help center access
             </p>
-            <a href="#" class="btn btn-primary btn-lg">Get started</a>
+            <a href="#" class="btn btn-primary btn-lg w-100">
+              Get started
+            </a>
           </div>
         </div>
       </div>
-      <div class="col">
-        <div class="card">
-          <div class="card-header">
-            Enterprise
-          </div>
-          <div class="card-body">
-            <div class="card-title">
-              <h4>
-                Enterprise
-              </h4>
-              <p class="card-text">
-                30 users included
-              </p>
-              <p class="card-text">
-                15 GB of storage
-              </p>
-              <p class="card-text">
-                Phone and email support
-              </p>
-              <p class="card-text">
-                Help center access
-              </p>
-              <a href="#" class="btn btn-lg btn-primary">
-                Contact us
-              </a>
-            </div>
-          </div>
+    <div class="col">
+      <div class="card text-center shadow">
+        <div class="card-header text-center">
+          <h4 class="font-weight-normal">Enterprise</h4>
+        </div>
+        <div class="card-body">
+          <h1 class="card-title mb-4">$29 <span class="text-secondary font-weight-light">/ mo</span></h1>
+          <p class="card-text m-1">
+            30 users included
+          </p>
+          <p class="card-text m-1">
+            15 GB of storage
+          </p>
+          <p class="card-text m-1">
+            Phone and email support
+          </p>
+          <p class="card-text mb-4 ">
+            Help center access
+          </p>
+          <a href="#" class="btn btn-primary btn-lg w-100">
+            Contact us
+          </a>
         </div>
       </div>
+    </div>
     </div>
 
     <footer>
