finish minor touches and wrap up

--- a/bootstrap-pricing/index.html
+++ b/bootstrap-pricing/index.html
@@ -42,25 +42,24 @@
 
 
   <div class="container justify-content-between">
-    <div class="container pl-7 pr-7 mb-4">
-    <div class="row mt-4 pt-4">
-      <div class="col text-center">
-        <h1 class="display-3">Pricing</h1>
+    <div class="container mb-4">
+      <div class="row mt-4 pt-4">
+        <div class="col text-center">
+          <h1 class="display-3">Pricing</h1>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col text-center">
+          <p class="lead p-4">
+            Quickly build am effective pricing table for your potential customer with this Bootstrap example. It's built
+            with default Bootstrap components and utilites with little customization.
+          </p>
+        </div>
       </div>
     </div>
 
-    <div class="row">
-      <div class="col text-center">
-        <p class="lead p-4">
-          Quickly build am effective pricing table for your potential customer with this Bootstrap example. It's built
-          with default Bootstrap components and utilites with little customization.
-        </p>
-      </div>
-    </div>
-    </div>
-
-    <div class="row">
-      <div class="col">
+    <div class="card-deck mb-4">
         <div class="card text-center shadow">
           <div class="card-header text-center">
             <h4 class="font-weight-normal">Free</h4>
@@ -84,8 +83,8 @@
             </a>
           </div>
         </div>
-      </div>
-      <div class="col">
+
+
         <div class="card text-center shadow">
           <div class="card-header text-center">
             <h4 class="font-weight-normal">Pro</h4>
@@ -109,62 +108,62 @@
             </a>
           </div>
         </div>
-      </div>
-    <div class="col">
-      <div class="card text-center shadow">
-        <div class="card-header text-center">
-          <h4 class="font-weight-normal">Enterprise</h4>
-        </div>
-        <div class="card-body">
-          <h1 class="card-title mb-4">$29 <span class="text-secondary font-weight-light">/ mo</span></h1>
-          <p class="card-text m-1">
-            30 users included
-          </p>
-          <p class="card-text m-1">
-            15 GB of storage
-          </p>
-          <p class="card-text m-1">
-            Phone and email support
-          </p>
-          <p class="card-text mb-4 ">
-            Help center access
-          </p>
-          <a href="#" class="btn btn-primary btn-lg w-100">
-            Contact us
-          </a>
-        </div>
-      </div>
-    </div>
-    </div>
 
-    <footer>
-      <div class="row">
+        <div class="card text-center shadow">
+          <div class="card-header text-center">
+            <h4 class="font-weight-normal">Enterprise</h4>
+          </div>
+          <div class="card-body">
+            <h1 class="card-title mb-4">$29 <span class="text-secondary font-weight-light">/ mo</span></h1>
+            <p class="card-text m-1">
+              30 users included
+            </p>
+            <p class="card-text m-1">
+              15 GB of storage
+            </p>
+            <p class="card-text m-1">
+              Phone and email support
+            </p>
+            <p class="card-text mb-4 ">
+              Help center access
+            </p>
+            <a href="#" class="btn btn-primary btn-lg w-100">
+              Contact us
+            </a>
+          </div>
+        </div>
+      </div>
+
+
+    <footer class="border-top">
+      <div class="row pt-4 my-md-5 pt-md-5">
         <div class="col">
-          <img src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg " alt="Bootstrap image">
+          <img class="small-pic" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg "
+            alt="Bootstrap image">
           <p> &copy; 2017-2018</p>
         </div>
-        <div class="col">
+        <div class="col d-flex flex-column">
           <h4>Features</h4>
-          <p>Cool stuff</p>
-          <p>Random feature</p>
-          <p>Team feature</p>
-          <p>Stuff for developers</p>
-          <p>Another one</p>
-          <p>last time</p>
+          <a href="#" class="m-0 text-secondary">Cool stuff</a>
+          <a href="#" class="m-0 text-secondary">Random feature</a>
+          <a href="#" class="m-0 text-secondary">Team feature</a>
+          <a href="#" class="m-0 text-secondary">Stuff for developers</a>
+          <a href="#" class="m-0 text-secondary">Another one</a>
+          <a href="#" class="m-0 text-secondary">Last time</a>
         </div>
-        <div class="col">
-          <h4>Reources</h4>
-          <p>Resource</p>
-          <p>Resource name</p>
-          <p>Another resource</p>
-          <p>Final resource</p>
+        <div class="col d-flex flex-column">
+          <h4 >Resources</h4>
+          <a href="#" class="m-0 text-secondary">Resource</a>
+          <a href="#" class="m-0 text-secondary">Resource name</a>
+          <a href="#" class="m-0 text-secondary">Another resource</a>
+          <a href="#" class="m-0 text-secondary">Final resource</a>
         </div>
-        <div class="col">
+        <div class="col d-flex flex-column">
           <h4>About</h4>
-          <p>Team</p>
-          <p>Locations</p>
-          <p>Privacy</p>
-          <p>Terms</p>
+          <a href="#" class="m-0 text-secondary">Team</a>
+          <a href="#" class="m-0 text-secondary">Locations</a>
+          <a href="#" class="m-0 text-secondary">Privacy</a>
+          <a href="#" class="m-0 text-secondary">Terms</a>
         </div>
       </div>
     </footer>
